# statistic

./: Dockerfile  README.md  dev.sh  main.py  models.py  pyproject.toml
.github/workflows/: my-CI.yml
CSV/: download.csv  gmurman_668.csv  gmurman_674.csv  test.csv  variant_22.csv  variant_28.csv
calculations/: distribution.py  distributions.py  test_distributions.py  types.py
calculations/ANOVA/: SingleANOVA.py  types.py
calculations/distributions/: compare_cdf.py  exponential.py  normal.py  uniform.py
client/: index.html  package-lock.json  package.json  webpack.config.js
client/src/: App.js  App.tsx  Navbar.tsx  cache.tsx  index.js  index.tsx  interfaceStore.tsx
client/src/ANOVA/: ANOVA.tsx  GeneralTable.tsx  axiosInstance.ts  query.tsx  rv.tsx
client/src/ANOVA/practicalPart/: BibliographicList.tsx  DataUploader.tsx  Description.tsx  GeneralTable.tsx  Plot1.tsx  Step1.tsx  Step2.tsx  Table2.tsx  Table3.tsx
client/src/ANOVA/practicalPart/calculateData/: Conclusion.tsx  Description.tsx  Interface.tsx  Plot1.tsx  PracticalPart.tsx  SecondStepStore.ts  Step1.tsx  Step2.tsx  Table2.tsx  Table3.tsx
client/src/ANOVA/practicalPart/interface/: CreateData.tsx  Interface.tsx  (+2 more)
client/src/ANOVA/teoreticalPart/: Introduction.tsx  Paragraph1.tsx  Paragraph2.tsx  Paragraph3.tsx  Table1.tsx  TheoreticalPath.tsx
client/src/plots/: NormalDistribution.tsx  Tests.tsx  UniformDistribution.tsx  query.tsx
client/src/tasks/: Task_1_1.tsx  Task_1_2.tsx  query.tsx
routers/: main_router.py
routers/anova/: anova_router.py
routers/destribution/: destribution_router.py
(+10 files in other folders)
